Se traducen más fórmulas a lenguaje Javascript y se agregan algunos estilos CSS

--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
                 <input type="number" placeholder="¿Cuál es el radio del círculo?">
             </label>
         </section>
+        <section class="main-section-4-DiscountPrice">
+            <p>
+                ¿Calcular el descuento de un producto?
+            </p>
+            <label for="Price">
+                ¿Cuál es el precio del producto?
+                <input type="number" id="Price">
+            </label>
+            <label for="Discount">
+                ¿Cuál es el descuento del producto?
+                <input type="number" id="Discount">
+            </label>
+        </section>
     </main>
 
     <script src="./main.js"></script>
