Se agrega la sección de descuentos con cupón y se crea la lógica respectiva para que funcione correctamente

--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@
                 <p id="DiscountResult">Resultado 😊</p>
             </div>
         </section>
+        <section class="main-section-4-DiscountPriceCoupon">
+            <p>
+                ¿Tienes un cupón de descuento de un producto?
+            </p>
+            <label for="Price">
+                ¿Cuál es el precio del producto?
+                <input type="number" id="PriceCoupon">
+            </label>
+            <label for="Discount">
+                ¿Cuál es el cupón de descuento del producto?
+                <input type="text" id="DiscountCoupon">
+            </label>
+            <button id="DiscountCouponButton">Calcular Descuento</button>
+            <div class="DiscountResultContainer">
+                <p id="DiscountCouponResult">Resultado 😊</p>
+            </div>
+        </section>
     </main>
 
     <script src="./main.js"></script>
