--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
                 <p id="DiscountCouponResult">Resultado 😊</p>
             </div>
         </section>
+        <section class="main-section-4-calcular-promedio">
+            <p>
+                ¿Cómo calcular el promedio?
+            </p>
+            <div>
+                <p>
+                    El promedio de: [1,2,3,4,5,6,7,8,9,10]
+                </p>
+                <p>
+                    El resultado es:
+                    <span class="PromedioResult"></span>
+                </p>
+                <button class="PromedioResultButton">Calcular Promedio</button>
+            </div>
+        </section>
     </main>
 
     <script src="./main.js"></script>
